k8s/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dispatcher-svc
spec:
  selector:
    app: dispatcher
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: grpc
      port: 9081
      targetPort: 9081
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: worker-svc
  labels:
    app: worker
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 9082
      targetPort: 9082
  selector:
    app: worker
